NEW274114
Fix remaining required uses of RefPtr rather than Ref in the bindings
https://bugs.webkit.org/show_bug.cgi?id=274114
Summary Fix remaining required uses of RefPtr rather than Ref in the bindings
Sam Weinig
Reported 2024-05-13 13:39:27 PDT
IDL unions should use Ref rather than RepPtr for interfaces
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-20 13:40:32 PDT
Sam Weinig
Comment 2 2024-05-21 10:41:23 PDT Comment hidden (obsolete)
Sam Weinig
Comment 3 2024-05-21 11:18:04 PDT Comment hidden (obsolete)
Sam Weinig
Comment 4 2024-05-24 08:29:40 PDT Comment hidden (obsolete)
Note You need to log in before you can comment on or make changes to this bug.