Fix remaining required uses of RefPtr rather than Ref in the bindings https://bugs.webkit.org/show_bug.cgi?id=274114

Reviewed by NOBODY (OOPS!).

Update bindings code generation to use Refs to represent non-nullable
wrapper types in all cases, fixing:

    - dictionaries
    - unions
    - records

This required two big changes:

1. Conversions from JSValues to WebCore types now return a type called
   ConversionResult, which either contains the successfully converted
   value, or indicates that an exception had been thrown. This is needed
   as the old model required the result of every conversion to be valid
   even in the case of an exception, which doesn't work for non-default
   constructible types like Ref or structures containing only Refs.

   ConversionResult is a template type that uses the IDL types to to
   determine the value it holds. IDL types can influence this using
   the new `ConversionResultType` and `NullableConversionResultType`
   traits. For instance, lone interfaces, use their implementation
   type reference (T&) as their `ConversionResultType` and pointer
   (T*) as their `NullableConversionResultType`, but when included
   in a union, the union will use the `InnerParameter` family of
   traits to cause it to be `std::variant<Ref<...>, ...>`.

2. Lots and lots of places had to be updated to use Ref rather than
   RefPtr. Truly so many.

A few knock on effects are that we now require dictionaries to be
aggregates, and to exactly match their IDL definition in member order
and member types. This was needed as we cannot rely on the structs
representing dictionaries to be default constructible anymore, and
instead must one-shot initialize them once all member conversions
complete. Requiring the structs to be aggregates is necessary to
avoid an explosion of additional constructors.

To make this work in a few tricky places, like the SubtleCrypto
parameters, the structs for the IDL dictionaries were pulled out
into their own types, and the existing code was used as a wrapper.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Headers.cmake:
    - Add new files.

... More files and commit message to come.